Encoding with DNxHD fails due to bad parameters #100079

Closed
opened 2022-07-30 13:10:07 +02:00 by Juuso Laine · 7 comments

Steps to reproduce:

  • Change output file format to FFMPEG Video.
  • Change codec to DNxHD.
  • Try to render. You get an error.

Looks like constant_rate_factor is set to FFM_CRF_MEDIUM, which shouldn't happen for DNxHD codecs, as it causes crf to be set in the FFMPEG options.

Original Report

System Information
Operating system: Windows 10 19044.1826
Graphics card: GTX 1070

Blender Version
Broken: 3.4.0 alpha master 9b9417b661 (also tested on 3.2.1 master a2d59b2dac so this isn't a bug with introduced in alpha)
Worked: wasn't able to find a working version

Short description of error
DNxHD rendering doesn't normally work, but I was able to get one file working somehow. Both attached files should have exact same settings, but only one renders. When the render fails with the broken file, it gives the ff_frame_thread_encoder_init failed error, and with --debug-ffmpeg, video parameters are incompatible with DNxHD. Notably however both files print the same video parameters to the console:

  Using type=4, codec=99, audio_codec=0,
  video_bitrate=120000, audio_bitrate=192,
  gop_size=15, autosplit=0
  render width=1920, render height=1080 

Exact steps for others to reproduce the error
Try rendering both files. With the working file, I have previously used a DNxHD file in sequencer and rendered it as H264 lossless, however I wasn't able to reproduce a working file with this. The broken file is a default file, with a video file in sequencer, and the render output settings changed to DNxHD.

system-info.txt
DNxHD broken.blend
DNxHD works.blend

Steps to reproduce: - Change output file format to FFMPEG Video. - Change codec to DNxHD. - Try to render. You get an error. Looks like `constant_rate_factor` is set to `FFM_CRF_MEDIUM`, which shouldn't happen for DNxHD codecs, as it causes `crf` to be set in the FFMPEG options. ### Original Report **System Information** Operating system: Windows 10 19044.1826 Graphics card: GTX 1070 **Blender Version** Broken: 3.4.0 alpha master 9b9417b66150 (also tested on 3.2.1 master a2d59b2dac9e so this isn't a bug with introduced in alpha) Worked: wasn't able to find a working version **Short description of error** DNxHD rendering doesn't normally work, but I was able to get one file working somehow. Both attached files should have exact same settings, but only one renders. When the render fails with the broken file, it gives the `ff_frame_thread_encoder_init failed` error, and with --debug-ffmpeg, video parameters are incompatible with DNxHD. Notably however both files print the same video parameters to the console: ``` Using type=4, codec=99, audio_codec=0, video_bitrate=120000, audio_bitrate=192, gop_size=15, autosplit=0 render width=1920, render height=1080 ``` **Exact steps for others to reproduce the error** Try rendering both files. With the working file, I have previously used a DNxHD file in sequencer and rendered it as H264 lossless, however I wasn't able to reproduce a working file with this. The broken file is a default file, with a video file in sequencer, and the render output settings changed to DNxHD. [system-info.txt](https://archive.blender.org/developer/F13326401/system-info.txt) [DNxHD broken.blend](https://archive.blender.org/developer/F13326399/DNxHD_broken.blend) [DNxHD works.blend](https://archive.blender.org/developer/F13326400/DNxHD_works.blend)
Author

Added subscriber: @Juuso-Laine

Added subscriber: @Juuso-Laine
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Looks like constant_rate_factor is set to FFM_CRF_MEDIUM, which shouldn't happen for DNxHD codecs, as it causes crf to be set in the FFMPEG options.

Looks like `constant_rate_factor` is set to `FFM_CRF_MEDIUM`, which shouldn't happen for `DNxHD` codecs, as it causes `crf` to be set in the FFMPEG options.
Omar Emara changed title from Strange DNxHD bug, one blend file renders but other doesn't with exact same settings to Encoding with DNxHD fails due to bad parameters 2022-08-01 11:11:48 +02:00

This issue was referenced by 06a01168f6

This issue was referenced by 06a01168f669aa223f87f6b65538ce36c5300157

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-08-17 05:12:01 +02:00

Note for fix, to observe effect, set codec to different one and back to DNxHD.

Note for fix, to observe effect, set codec to different one and back to DNxHD.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100079
No description provided.