Fix T100079: Encoding with DNxHD fails due to bad parameters

Constant_rate_factor mode was not updated when choosing DNxHD codec in
RNA update function.

Ensure `FFM_CRF_NONE` is set.